Let a member mark a flagged problem as reviewed (#134)
* Let a member mark a flagged problem as reviewed (#113)

* Name system actors in problem activity
